too many changes in category

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title> 
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" /> 
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="description" content="Discover unforgettable travel experiences with WovTours. Book your next adventure with confidence and ease.">
+    <title>Wov Tours - Admin</title> 
      <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&family=Rubik:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body class="bg-custom-gray "> 
