--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" /> 
+    <link rel="icon" type="image/svg+xml" href="/wov-tours-favicon.png" /> 
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta name="description" content="Discover unforgettable travel experiences with WovTours. Book your next adventure with confidence and ease.">
     <title>Wov Tours - Admin</title> 
